[Student Feature]: Added migration

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "gympoint",
   "version": "1.0.0",
   "main": "index.js",
+  "author": "Alley M. Carvalho <alleycarvalho@gmail.com>",
   "license": "MIT",
   "scripts": {
     "dev": "nodemon src/server.js",
