--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gympoint",
+  "name": "gympoint-api",
   "version": "1.0.0",
   "main": "index.js",
   "author": "Alley M. Carvalho <alleycarvalho@gmail.com>",
